--- a/DrMathDesktop/App.config
+++ b/DrMathDesktop/App.config
@@ -7,20 +7,16 @@
   <!--========================================================-->
   <!--"Data Source=" + @"D:\Test.db;Version=3;Integrated Security=True;Connect Timeout=30;Pooling=False;Max Pool Size=100;"-->
   <connectionStrings>
-    <add name="local"
-         connectionString="Data Source=DrMathDb.db;MultipleActiveResultSets=true;Version=3;Connect Timeout=30;Pooling=true;Max Pool Size=100;"
-         providerName="System.Data.SQLite.EF6"
-         />
-
-
-    <add name="localServer" connectionString="Data Source=.;      
-         Initial Catalog=DrMathDesktopApi; 
-         Integrated Security=True;     
-         MultipleActiveResultSets=True"
-        providerName="System.Data.SqlClient" />
+    <add name="local" connectionString="Data Source=DrMathDb.db;MultipleActiveResultSets=true;Version=3;Connect Timeout=30;Pooling=true;Max Pool Size=100;"
+      providerName="System.Data.SQLite.EF6" />
+    <add name="localServer" connectionString="Data Source=.;      &#xD;&#xA;         Initial Catalog=DrMathDesktopApi; &#xD;&#xA;         Integrated Security=True;     &#xD;&#xA;         MultipleActiveResultSets=True"
+      providerName="System.Data.SqlClient" />
+    <add name="DrMathDesktop.Properties.Settings.DrMathDesktopApiConnectionString"
+      connectionString="Data Source=.;Initial Catalog=DrMathDesktopApi;Integrated Security=True"
+      providerName="System.Data.SqlClient" />
   </connectionStrings>
   <!--========================================================-->
-  <startup>
+  <startup useLegacyV2RuntimeActivationPolicy="true">
     <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.6" />
   </startup>
   <entityFramework>
